# dotfiles-manager

./: AGENTS.md  README.md  pyproject.toml
src/dotman/: cli.py  config.py  linker.py
tests/: test_dotman.py
